--- Auto-Git Commit ---

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,13 +1,15 @@
+@import 'normalize'
+
 *,
 *::before,
 *::after
     box-sizing: border-box
-@import 'normalize'
+body
+    font-family: 'ProximaNova'
+
 @import 'font'
 @import 'colors'
 @import 'interface'
-
-
 @import 'block/header'
 
 @import 'media'            
