--- Auto-Git Commit ---

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,10 +6,13 @@
     box-sizing: border-box
 body
     font-family: 'ProximaNova'
+    font-weight: normal
+    font-size: 14px
 
 @import 'font'
 @import 'colors'
 @import 'interface'
+
 @import 'block/header'
 
 @import 'media'            
