--- a/src/css/style.css
+++ b/src/css/style.css
@@ -350,13 +350,15 @@ template {
 
 body {
   font-family: 'ProximaNova';
+  font-weight: normal;
+  font-size: 14px;
 }
 
 @font-face {
   font-display: swap;
   font-family: 'ProximaNova';
   src: url("../fonts/ProximaNova-Light.eot");
-  src: local("ProximaNova"), local("ProximaNova"), url("../fonts/ProximaNova-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Light.woff") format("woff"), url("../fonts/ProximaNova-Light.ttf") format("truetype");
+  src: local("Proxima Nova Light"), local("ProximaNova-Light"), url("../fonts/ProximaNova-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Light.woff") format("woff"), url("../fonts/ProximaNova-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
@@ -365,8 +367,8 @@ body {
   font-display: swap;
   font-family: 'ProximaNova';
   src: url("../fonts/ProximaNova-Regular.eot");
-  src: local("ProximaNova"), local("ProximaNova"), url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype");
-  font-weight: 400;
+  src: local("Proxima Nova Regular"), local("ProximaNova-Regular"), url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype");
+  font-weight: normal;
   font-style: normal;
 }
 
@@ -374,7 +376,7 @@ body {
   font-display: swap;
   font-family: 'ProximaNova';
   src: url("../fonts/ProximaNova-Semibold.eot");
-  src: local("ProximaNova"), local("ProximaNova"), url("../fonts/ProximaNova-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Semibold.woff") format("woff"), url("../fonts/ProximaNova-Semibold.ttf") format("truetype");
+  src: local("Proxima Nova Semibold"), local("ProximaNova-Semibold"), url("../fonts/ProximaNova-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Semibold.woff") format("woff"), url("../fonts/ProximaNova-Semibold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
@@ -383,8 +385,8 @@ body {
   font-display: swap;
   font-family: 'ProximaNova';
   src: url("../fonts/ProximaNova-Bold.eot");
-  src: local("ProximaNova"), local("ProximaNova"), url("../fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Bold.woff") format("woff"), url("../fonts/ProximaNova-Bold.ttf") format("truetype");
-  font-weight: 700;
+  src: local("Proxima Nova Bold"), local("ProximaNova-Bold"), url("../fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Bold.woff") format("woff"), url("../fonts/ProximaNova-Bold.ttf") format("truetype");
+  font-weight: bold;
   font-style: normal;
 }
 
