--- a/src/sass/_font.scss
+++ b/src/sass/_font.scss
@@ -2,7 +2,7 @@
     font-display: swap;
     font-family: 'ProximaNova';
     src: url('../fonts/ProximaNova-Light.eot');
-    src: local('ProximaNova'), local('ProximaNova'),
+    src: local('Proxima Nova Light'), local('ProximaNova-Light'),
         url('../fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'),
         url('../fonts/ProximaNova-Light.woff') format('woff'),
         url('../fonts/ProximaNova-Light.ttf') format('truetype');
@@ -13,18 +13,18 @@
     font-display: swap;
     font-family: 'ProximaNova';
     src: url('../fonts/ProximaNova-Regular.eot');
-    src: local('ProximaNova'), local('ProximaNova'),
+    src: local('Proxima Nova Regular'), local('ProximaNova-Regular'),
         url('../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
         url('../fonts/ProximaNova-Regular.woff') format('woff'),
         url('../fonts/ProximaNova-Regular.ttf') format('truetype');
-    font-weight: 400;
+    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-display: swap;
     font-family: 'ProximaNova';
     src: url('../fonts/ProximaNova-Semibold.eot');
-    src: local('ProximaNova'), local('ProximaNova'),
+    src: local('Proxima Nova Semibold'), local('ProximaNova-Semibold'),
         url('../fonts/ProximaNova-Semibold.eot?#iefix') format('embedded-opentype'),
         url('../fonts/ProximaNova-Semibold.woff') format('woff'),
         url('../fonts/ProximaNova-Semibold.ttf') format('truetype');
@@ -35,10 +35,10 @@
     font-display: swap;
     font-family: 'ProximaNova';
     src: url('../fonts/ProximaNova-Bold.eot');
-    src: local('ProximaNova'), local('ProximaNova'),
+    src: local('Proxima Nova Bold'), local('ProximaNova-Bold'),
         url('../fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'),
         url('../fonts/ProximaNova-Bold.woff') format('woff'),
         url('../fonts/ProximaNova-Bold.ttf') format('truetype');
-    font-weight: 700;
+    font-weight: bold;
     font-style: normal;
 }
