--- Auto-Git Commit ---

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -402,4 +402,10 @@ button,
 input {
   outline: none;
 }
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 15px;
+}
 /*# sourceMappingURL=style.css.map */
