--- a/src/css/style.css
+++ b/src/css/style.css
@@ -408,4 +408,34 @@ input {
   margin: auto;
   padding: 0 15px;
 }
+
+.header {
+  background-color: #e9e9e9;
+}
+
+.header-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.header-nav__link {
+  color: #000000;
+  display: block;
+  border-bottom: 1px solid;
+}
 /*# sourceMappingURL=style.css.map */
