--- Auto-Git Commit ---

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -5,8 +5,14 @@ a
 button,
 input
     outline: none
-
 .container
     max-width: 1200px
     margin: auto
-    padding: 0 15px    
+    padding: 0 15px
+.button-callback
+    font-weight: normal
+    font-size: 14px
+    background-color: transparent
+    border: transparent
+    border-bottom: 1px solid $button
+    color: $button
