--- a/src/css/style.css
+++ b/src/css/style.css
@@ -409,6 +409,15 @@ input {
   padding: 0 15px;
 }
 
+.button-callback {
+  font-weight: normal;
+  font-size: 14px;
+  background-color: transparent;
+  border: transparent;
+  border-bottom: 1px solid #22bac1;
+  color: #22bac1;
+}
+
 .header {
   background-color: #e9e9e9;
 }
@@ -419,9 +428,13 @@ input {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  min-height: 54px;
 }
 
 .header-nav {
@@ -433,9 +446,39 @@ input {
   list-style-type: none;
 }
 
+.header-nav__item {
+  margin: 0 5px;
+}
+
+.header-nav__item:first-child {
+  margin: 0 5px 0 0;
+}
+
+.header-nav__item:last-child {
+  margin: 0 0 0 5px;
+}
+
 .header-nav__link {
   color: #000000;
   display: block;
-  border-bottom: 1px solid;
+  font-weight: normal;
+  border-bottom: 2px solid #949494;
+}
+
+.header-contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header-contact__phone {
+  text-align: right;
+  color: #1f1f1f;
+  font-size: 17px;
+  font-weight: bold;
 }
 /*# sourceMappingURL=style.css.map */
