--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -5,15 +5,15 @@ a
 button,
 input
     outline: none
+button
+    cursor: pointer    
 .container
     max-width: 1200px
     margin: auto
     padding: 0 15px
 .button-callback
     font-weight: normal
-    font-size: 14px
     background-color: transparent
     border: transparent
     border-bottom: 1px solid $button
     color: $button
-    padding: 0
