--- a/src/sass/block/_header.sass
+++ b/src/sass/block/_header.sass
@@ -30,4 +30,6 @@
             color: $phone-color 
             font-size: 17px
             font-weight: bold
-                  
+        &__callback
+            padding: 0
+            font-size: 14px      
