--- a/src/css/style.css
+++ b/src/css/style.css
@@ -450,15 +450,12 @@ button {
 }
 
 .header-nav__item {
-  margin: 0 5px;
-}
-
-.header-nav__item:first-child {
-  margin: 0 5px 0 0;
+  margin-top: 3px;
+  margin-right: 39px;
 }
 
 .header-nav__item:last-child {
-  margin: 0 0 0 5px;
+  margin-right: 0;
 }
 
 .header-nav__link {
