--- a/src/sass/block/_header.sass
+++ b/src/sass/block/_header.sass
@@ -12,11 +12,10 @@
         padding: 0
         list-style-type: none
         &__item
-            margin: 0 5px
-            &:first-child
-                margin: 0 5px 0 0
+            margin-top: 3px
+            margin-right: 39px
             &:last-child
-                margin: 0 0 0 5px 
+                margin-right: 0 
         &__link
             color: $black
             display: block
