--- a/src/css/style.css
+++ b/src/css/style.css
@@ -422,6 +422,8 @@ button {
 }
 
 .header {
+  position: relative;
+  z-index: 2;
   background-color: #e9e9e9;
 }
 
@@ -485,5 +487,35 @@ button {
 .header-contact__callback {
   padding: 0;
   font-size: 14px;
+}
+
+.offer:before {
+  content: '';
+  background: url(../img/offer/offer.jpg) center no-repeat;
+  min-height: 710px;
+  max-width: 1920px;
+  width: 100%;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@media (max-width: 1070px) {
+  .header-nav__item {
+    margin-right: 17px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header {
+    background-color: transparent;
+  }
+  .header-nav {
+    display: none;
+  }
+  .header-contact__phone {
+    color: #ffffff;
+  }
 }
 /*# sourceMappingURL=style.css.map */
