--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -10,4 +10,8 @@
             display: none
         &-contact
             &__phone
-                color: $white                    
+                color: $white 
+        &-contact
+            margin-top: 28px
+            &__phone
+                margin-bottom: 13px                           
