--- a/src/sass/block/_header.sass
+++ b/src/sass/block/_header.sass
@@ -33,4 +33,26 @@
             font-weight: bold
         &__callback
             padding: 0
-            font-size: 14px      
+            font-size: 14px
+.burger
+    margin-top: 25px
+    cursor: pointer
+    &-block
+        position: relative
+        &__top,
+        &__center,
+        &__bottom
+           width: 17px
+           height: 2px
+           background-color: $white
+           position: absolute
+        &__top
+            top: 0
+        &__center
+            top: 7px
+        &__bottom
+            top: 14px           
+    &-text
+        color: $white
+        text-transform: uppercase
+        margin-left: 34px
