--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -8,6 +8,9 @@
         background-color: transparent
         &-nav
             display: none
+            flex-direction: column
+            &__link
+                color: $white
         &-contact
             &__phone
                 color: $white 
