--- a/src/sass/block/_header.sass
+++ b/src/sass/block/_header.sass
@@ -56,3 +56,6 @@
         color: $white
         text-transform: uppercase
         margin-left: 34px
+.burger-open.burger-block__top
+    transform: rotate(45deg)
+    top: 0   
