--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -9,8 +9,16 @@
         &-nav
             display: none
             flex-direction: column
+            position: absolute
+            top: 77px
+            &__item
+                margin: 0
+                &:first-child
+                    border-top: 2px solid $border-bottom    
             &__link
                 color: $white
+                font-size: 18px
+                padding: 7px 0
         &-contact
             &__phone
                 color: $white 
