--- a/src/sass/block/_main.sass
+++ b/src/sass/block/_main.sass
@@ -1,4 +1,6 @@
-.offer
+.section-main
+    p
+.main
     &:before
         content: ''
         background: url(../img/offer/offer.jpg) center no-repeat
