--- a/src/sass/block/_header.sass
+++ b/src/sass/block/_header.sass
@@ -2,6 +2,8 @@
     position: relative
     z-index: 2
     background-color: $header-bg
+    box-shadow: 0 21px 21px rgba(0, 0, 0, 0.28)
+    opacity: 0.9
     &-block
         display: flex
         flex-wrap: wrap
