--- a/src/sass/block/_main.sass
+++ b/src/sass/block/_main.sass
@@ -3,10 +3,29 @@
 .main
     &:before
         content: ''
-        background: url(../img/offer/offer.jpg) center no-repeat
+        background: url(../img/main/main.jpg) center no-repeat
         min-height: 710px
         width: 100%
         background-size: cover
         position: absolute
         top: 0
         left: 0
+    &-block
+        position: relative    
+    &-text
+        max-width: 510px
+        &__title
+            color: $main-block-text
+            font-size: 48px
+            font-weight: normal
+            line-height: 60px 
+            margin: 0 0 49px
+        &__subtitle
+            color: $main-block-text
+            display: block
+            font-size: 20px
+            font-weight: 300
+    &-list
+        list-style-type: none
+        padding: 0
+        margin: 66px 0 0        
