--- a/src/sass/block/_main.sass
+++ b/src/sass/block/_main.sass
@@ -28,4 +28,15 @@
     &-list
         list-style-type: none
         padding: 0
-        margin: 66px 0 0        
+        margin: 66px 0 0
+        &__image
+            width: 35px
+            height: 35px
+            border: 1px solid darken($white,10%)
+            border-radius: 50%
+            text-align: center
+            line-height: 35px
+        &__text
+            font-size: 15px
+            color: $white
+            font-weight: 300       
