--- a/src/css/style.css
+++ b/src/css/style.css
@@ -571,6 +571,14 @@ button {
 
 .main-block {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .main-text {
@@ -598,19 +606,43 @@ button {
   margin: 66px 0 0;
 }
 
+.main-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 21px;
+}
+
 .main-list__image {
   width: 35px;
   height: 35px;
-  border: 1px solid #e6e6e6;
+  border: 1px solid #7c7c7c;
   border-radius: 50%;
-  text-align: center;
-  line-height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 25px;
 }
 
 .main-list__text {
   font-size: 15px;
   color: #ffffff;
+  max-width: 206px;
   font-weight: 300;
+}
+
+.main-form {
+  max-width: 370px;
+  background-color: #ffffff;
 }
 
 @media (max-width: 1070px) {
