--- a/src/css/style.css
+++ b/src/css/style.css
@@ -421,6 +421,23 @@ button {
   color: #22bac1;
 }
 
+.input {
+  text-align: center;
+  width: 100%;
+  height: 50px;
+  border: 1px solid #e8e8e8;
+}
+
+.button {
+  width: 100%;
+  font-weight: normal;
+  text-transform: uppercase;
+  height: 60px;
+  color: #ffffff;
+  background-color: #23bac1;
+  border: none;
+}
+
 .burger {
   display: none;
   cursor: pointer;
@@ -576,6 +593,9 @@ button {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -643,6 +663,31 @@ button {
 .main-form {
   max-width: 370px;
   background-color: #ffffff;
+  padding: 40px 55px 43px;
+}
+
+.main-form__title {
+  color: #000000;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  max-width: 234px;
+  margin: 0 auto 28px;
+}
+
+.main-form__title strong {
+  font-weight: bold;
+}
+
+.main__input {
+  margin-bottom: 15px;
+}
+
+.main__button {
+  margin: 5px auto 0;
+  display: block;
+  font-size: 15px;
+  letter-spacing: 0.38px;
 }
 
 @media (max-width: 1070px) {
