--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -17,7 +17,19 @@ button
     border: transparent
     border-bottom: 1px solid $button
     color: $button
-
+.input
+    text-align: center
+    width: 100%
+    height: 50px
+    border: 1px solid $input-color
+.button
+    width: 100%    
+    font-weight: normal
+    text-transform: uppercase
+    height: 60px
+    color: $white
+    background-color: $form-button
+    border: none
 .burger
     display: none
     cursor: pointer
