--- a/src/sass/block/_main.sass
+++ b/src/sass/block/_main.sass
@@ -14,6 +14,7 @@
         position: relative 
         display: flex
         flex-wrap: wrap
+        align-items: center
         justify-content: space-between   
     &-text
         max-width: 510px
@@ -52,4 +53,21 @@
             font-weight: 300 
     &-form
         max-width: 370px
-        background-color: $white               
+        background-color: $white
+        padding: 40px 55px 43px
+        &__title
+            color: $black
+            font-size: 18px
+            font-weight: 400
+            text-align: center
+            max-width: 234px
+            margin: 0 auto 28px
+            & strong
+                font-weight: bold
+    &__input
+        margin-bottom: 15px
+    &__button
+        margin: 5px auto 0
+        display: block
+        font-size: 15px
+        letter-spacing: 0.38px                        
