--- a/src/sass/block/_main.sass
+++ b/src/sass/block/_main.sass
@@ -64,6 +64,13 @@
             margin: 0 auto 28px
             & strong
                 font-weight: bold
+    &__form
+        &-block
+            position: relative
+            & label
+                position: absolute
+                top: 0
+                left: 0           
     &__input
         margin-bottom: 15px
     &__button
