--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -30,6 +30,11 @@ button
     color: $white
     background-color: $form-button
     border: none
+.error
+    border: 1px solid $error
+
+
+
 .burger
     display: none
     cursor: pointer
