--- a/src/sass/block/_main.sass
+++ b/src/sass/block/_main.sass
@@ -69,8 +69,12 @@
             position: relative
             & label
                 position: absolute
-                top: 0
-                left: 0           
+                left: 0
+                bottom: -1px
+                width: 100%
+                color: $error
+                text-align: center
+                border: none          
     &__input
         margin-bottom: 15px
     &__button
