--- a/src/sass/block/_main.sass
+++ b/src/sass/block/_main.sass
@@ -14,16 +14,17 @@
         position: relative 
         display: flex
         flex-wrap: wrap
-        align-items: center
+        align-items: end
         justify-content: space-between   
     &-text
         max-width: 510px
+        margin-left: 8px
         &__title
             color: $main-block-text
             font-size: 48px
             font-weight: normal
-            line-height: 60px 
-            margin: 0 0 49px
+            line-height: 58px 
+            margin: -10px auto 36px 0
         &__subtitle
             color: $main-block-text
             display: block
@@ -32,7 +33,7 @@
     &-list
         list-style-type: none
         padding: 0
-        margin: 66px 0 0
+        margin: 57px 0 0
         &__item
             display: flex
             align-items: center
@@ -53,15 +54,17 @@
             font-weight: 300 
     &-form
         max-width: 370px
+        width: 100%
         background-color: $white
         padding: 40px 55px 43px
+        margin-right: -8px
         &__title
             color: $black
             font-size: 18px
             font-weight: 400
             text-align: center
             max-width: 234px
-            margin: 0 auto 28px
+            margin: -3px auto 28px
             & strong
                 font-weight: bold
     &__form
