--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -24,11 +24,15 @@
             &__item
                 margin: 0
                 &:first-child
-                    border-top: 1px solid $border-bottom    
+                    border-top: 1px solid $white    
             &__link
+                position: relative
+                z-index: 5
                 color: $white
                 font-size: 18px
                 padding: 7px 15px
+                background-color: $form-button
+                border-bottom: 1px solid $white
         &-contact
             &__phone
                 color: $white 
@@ -50,7 +54,29 @@
                 line-height: normal
                 margin: -10px auto 25px 0
         &-list
-            margin: 40px 0 0                                  
+            margin: 40px 0 0
+        &-form
+            padding: 30px 25px 30px
+            max-width: 330px 
+@media (max-width: 768px)
+    .main
+        &:before
+            min-height: 930px
+        &-block
+            flex-direction: column
+            align-items: center
+        &-text
+            &__title
+                font-size: 30px
+                margin: 0 0 20px 0 
+                text-align: center
+            &__subtitle
+                text-align: center
+        &-list
+            margin: 30px auto
+            max-width: 260px 
+            &__image
+                margin-right: 15px                                                           
 @media (max-width: 425px)
     .header
         & .container
@@ -64,4 +90,15 @@
                 margin-bottom: 5px
     .burger
         &-text
-            margin-left: 25px                                                                   
+            margin-left: 25px 
+    .main
+        & .container
+            max-width: 360px  
+        &-text
+            &__title
+                font-size: 24px
+            &__subtitle
+                font-size: 18px
+        &-form
+            max-width: 290px
+            padding: 25px 15px                                                                                            
