--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -32,7 +32,11 @@ button
     border: none
 .error
     border: 1px solid $error
-
+.section-title
+    font-weight: normal
+    font-size: 36px
+    color: $black
+    text-align: center
 
 
 .burger
