--- a/src/sass/block/_type.sass
+++ b/src/sass/block/_type.sass
@@ -13,3 +13,6 @@
             left: 50%
             bottom: -27px
             transform: translateX(-50%)
+    &__subtitle
+        margin: 0 0 79px
+        padding-top: 43px       
