--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -37,7 +37,12 @@ button
     font-size: 36px
     color: $black
     text-align: center
-
+.section-subtitle
+    display: block
+    font-weight: 300
+    color: $black
+    font-size: 20px
+    text-align: center
 
 .burger
     display: none
