--- a/src/css/style.css
+++ b/src/css/style.css
@@ -753,6 +753,20 @@ button {
   padding-top: 43px;
 }
 
+.layout {
+  max-width: 370px;
+  width: 100%;
+  padding: 33px 35 40px;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.layout:hover {
+  -webkit-box-shadow: 0 5px 32px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 32px rgba(0, 0, 0, 0.1);
+}
+
 @media (max-width: 1200px) {
   .main .container {
     max-width: 1100px;
