--- a/src/sass/block/_type.sass
+++ b/src/sass/block/_type.sass
@@ -16,3 +16,14 @@
     &__subtitle
         margin: 0 0 79px
         padding-top: 43px       
+.layout
+    max-width: 370px
+    width: 100%
+    padding: 33px 35 40px
+    transition: .3s
+    &:hover
+        box-shadow: 0 5px 32px rgba(0, 0, 0, 0.1)
+        // &s
+        //     display: flex
+        //     flex-wrap: wrap
+        //     justify-content: space-between
