--- a/src/sass/block/_type.sass
+++ b/src/sass/block/_type.sass
@@ -19,10 +19,28 @@
 .layout
     max-width: 370px
     width: 100%
-    padding: 33px 35 40px
+    padding: 33px 35px 40px
     transition: .3s
+    &__title
+        color: $black
+        font-size: 20px
+        font-weight: normal
+        text-align: center
+        margin: 0 0 24px
+    &__image
+        & img
+            display: block
+            margin: auto
+            filter: grayscale(100%)
     &:hover
-        box-shadow: 0 5px 32px rgba(0, 0, 0, 0.1)
+        box-shadow: 0 5px 32px rgba(0, 0, 0, 0.1) 
+        & img
+            display: block
+            margin: auto
+            filter: none
+    
+        //&__image img
+           // filter: none
         // &s
         //     display: flex
         //     flex-wrap: wrap
