--- a/src/css/style.css
+++ b/src/css/style.css
@@ -789,6 +789,71 @@ button {
           filter: none;
 }
 
+.layout:hover .layout-modal__link {
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+  background-color: #22bac1;
+  color: #ffffff;
+}
+
+.layouts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.layout-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 35px auto 31px;
+  text-align: center;
+  height: 245px;
+  overflow: hidden;
+}
+
+.layout-list__item {
+  color: #000000;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 35px;
+  position: relative;
+}
+
+.layout-list__item:after {
+  content: '';
+  width: 9px;
+  height: 2px;
+  background-color: #22bac1;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.layout-modal__link {
+  color: #000000;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.33px;
+  border: 1px solid #e7e7e7;
+  background-color: #ffffff;
+  display: block;
+  margin: auto;
+  width: 230px;
+  height: 55px;
+  text-align: center;
+  line-height: 55px;
+}
+
 @media (max-width: 1200px) {
   .main .container {
     max-width: 1100px;
