--- a/src/sass/block/_type.sass
+++ b/src/sass/block/_type.sass
@@ -38,10 +38,49 @@
             display: block
             margin: auto
             filter: none
-    
-        //&__image img
-           // filter: none
-        // &s
-        //     display: flex
-        //     flex-wrap: wrap
-        //     justify-content: space-between
+        & .layout-modal__link
+            transition: .3s
+            background-color: $button
+            color: $white
+    &s
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-between
+    &-list
+        list-style-type: none
+        padding: 0
+        margin: 35px auto 31px
+        text-align: center
+        height: 245px
+        overflow: hidden
+        &__item
+            color: $black
+            font-size: 16px
+            font-weight: 300
+            line-height: 35px
+            position: relative
+            &:after
+                content: ''
+                width: 9px
+                height: 2px
+                background-color: $button
+                position: absolute
+                bottom: 0
+                left: 50%
+                transform: translateX(-50%)
+    &-modal
+        &__link
+            color: $black
+            font-size: 13px
+            font-weight: 600
+            text-transform: uppercase
+            letter-spacing: 0.33px
+            border: 1px solid $header-bg
+            background-color: $white
+            display: block
+            margin: auto
+            width: 230px
+            height: 55px
+            text-align: center
+            line-height: 55px
+
