--- Auto-Git Commit ---

--- a/src/sass/block/_type.sass
+++ b/src/sass/block/_type.sass
@@ -1,5 +1,5 @@
 .section-type
-    padding: 101px 0 32px    
+    padding: 101px 0 2px    
 .type
     &__title
         margin: 0 0 25px
@@ -21,6 +21,7 @@
     width: 100%
     padding: 33px 35px 40px
     transition: .3s
+    margin-bottom: 30px
     &__title
         color: $black
         font-size: 20px
@@ -83,4 +84,9 @@
             height: 55px
             text-align: center
             line-height: 55px
-
+    &:last-child .layout-list__item
+        line-height: 21px
+        max-width: 230px
+        margin: auto            
+    &:last-child .layout-list__item:after 
+        display: none       
