--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,8 +16,9 @@ body
 @import 'block/header'
 @import 'block/main'
 @import 'block/type'
-
-
+@import 'a'
+@import 'animate/fading_entrances/fadeInUp'
+@import 'animate/base'
 
 
 
