--- a/src/css/style.css
+++ b/src/css/style.css
@@ -865,6 +865,28 @@ button {
   display: none;
 }
 
+@-webkit-keyframes scrollAnimate {
+  from {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes scrollAnimate {
+  from {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 @-webkit-keyframes fadeInUp {
   from {
     opacity: 0;
@@ -975,6 +997,12 @@ button {
   }
 }
 
+@media (max-width: 1160px) {
+  .type .container {
+    max-width: 820px;
+  }
+}
+
 @media (max-width: 1070px) {
   .header-nav__item {
     margin-right: 17px;
@@ -1043,6 +1071,30 @@ button {
   .main-form {
     padding: 30px 25px 30px;
     max-width: 330px;
+  }
+  .layout:hover {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .layout__image img {
+    -webkit-filter: none;
+            filter: none;
+  }
+  .layout:hover .layout-modal__link {
+    background-color: transparent;
+    color: #000000;
+  }
+}
+
+@media (max-width: 790px) {
+  .layouts {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
