--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -5,7 +5,11 @@
         &-form
             margin-right: 0
         &-text
-            margin-left: 0    
+            margin-left: 0 
+@media (max-width: 1160px)
+    .type
+        & .container
+            max-width: 820px               
 @media (max-width: 1070px)
     .header
         &-nav
@@ -57,7 +61,19 @@
             margin: 40px 0 0
         &-form
             padding: 30px 25px 30px
-            max-width: 330px 
+            max-width: 330px
+    .layout
+        &:hover
+            box-shadow: none
+        &__image img
+            filter: none
+        &:hover .layout-modal__link 
+            background-color: transparent
+            color: $black 
+@media (max-width: 790px)
+    .layouts
+        flex-direction: column
+        align-items: center                      
 @media (max-width: 768px)
     .main
         &:before
