--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,7 +16,7 @@ body
 @import 'block/header'
 @import 'block/main'
 @import 'block/type'
-@import 'a'
+@import 'animation'
 @import 'animate/fading_entrances/fadeInUp'
 @import 'animate/base'
 
