--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -92,7 +92,12 @@
             margin: 30px auto
             max-width: 260px 
             &__image
-                margin-right: 15px                                                           
+                margin-right: 15px
+    .section-type
+        padding: 60px 0 0
+    .type__subtitle
+        margin: 0 0 30px
+        padding-top: 30px                                                                               
 @media (max-width: 425px)
     .header
         & .container
@@ -117,4 +122,19 @@
                 font-size: 18px
         &-form
             max-width: 290px
-            padding: 25px 15px                                                                                            
+            padding: 25px 15px
+    .section-type
+        padding: 40px 0 0
+        margin-top: 46px   
+    .type
+        &__title
+            margin: 0 0 8px
+                &:after
+                    bottom: -10px
+        &__subtitle
+            margin: 0 0 20px
+            padding-top: 30px 
+            font-size: 18px              
+    .layout
+        max-width: 310px
+        padding: 20px 5px 30px                                                                                                    
