--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -129,7 +129,7 @@
     .type
         &__title
             margin: 0 0 8px
-                &:after
+        &__title:after
                     bottom: -10px
         &__subtitle
             margin: 0 0 20px
