--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -45,10 +45,10 @@
             &__phone
                 margin-bottom: 13px
     .section-main
-        padding: 40px 0 20px 
+        padding: 40px 0 
     .main
         &:before 
-            min-height: 582px
+            min-height: 563px
         & .container
             max-width: 830px    
         &-text
@@ -77,7 +77,7 @@
 @media (max-width: 768px)
     .main
         &:before
-            min-height: 930px
+            min-height: 942px
         &-block
             flex-direction: column
             align-items: center
@@ -113,6 +113,8 @@
         &-text
             margin-left: 25px 
     .main
+        &:before
+            min-height: 905px
         & .container
             max-width: 360px  
         &-text
@@ -124,8 +126,7 @@
             max-width: 290px
             padding: 25px 15px
     .section-type
-        padding: 40px 0 0
-        margin-top: 46px   
+        padding: 40px 0 
     .type
         &__title
             margin: 0 0 8px
