Внес правки с отступами

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1072,6 +1072,9 @@ button {
     padding: 30px 25px 30px;
     max-width: 330px;
   }
+  .section-type {
+    padding: 70px 0 2px;
+  }
   .layout:hover {
     -webkit-box-shadow: none;
             box-shadow: none;
@@ -1168,7 +1171,7 @@ button {
     padding: 25px 15px;
   }
   .section-type {
-    padding: 40px 0;
+    padding: 40px 0 0;
   }
   .type__title {
     margin: 0 0 8px;
