--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -62,6 +62,8 @@
         &-form
             padding: 30px 25px 30px
             max-width: 330px
+    .section-type
+        padding: 70px 0 2px        
     .layout
         &:hover
             box-shadow: none
@@ -126,7 +128,7 @@
             max-width: 290px
             padding: 25px 15px
     .section-type
-        padding: 40px 0 
+        padding: 40px 0 0
     .type
         &__title
             margin: 0 0 8px
