--- a/src/sass/block/_type.sass
+++ b/src/sass/block/_type.sass
@@ -84,6 +84,8 @@
             height: 55px
             text-align: center
             line-height: 55px
+    &:last-child .layout-list
+        margin: 30px auto 13px            
     &:last-child .layout-list__item
         line-height: 21px
         max-width: 230px
