--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -99,7 +99,10 @@
         padding: 60px 0 0
     .type__subtitle
         margin: 0 0 30px
-        padding-top: 30px                                                                               
+        padding-top: 30px
+    .layout
+        &:last-child .layout-list
+            height: 120px                                                                                   
 @media (max-width: 425px)
     .header
         & .container
