--- a/src/sass/block/_projects.sass
+++ b/src/sass/block/_projects.sass
@@ -4,4 +4,16 @@
     background-color: $project-bg
     &__title
         margin: 0 0 28px
-            
+        position: relative
+        &:after
+            content: ''
+            width: 31px
+            height: 2px
+            background-color: $form-button
+            position: absolute
+            left: 50%
+            bottom: -30px
+            transform: translateX(-50%)
+    &__subtitle
+        padding-top: 40px
+        margin-bottom: 99px          
