--- Auto-Git Commit ---

--- a/src/sass/block/_projects.sass
+++ b/src/sass/block/_projects.sass
@@ -16,4 +16,40 @@
             transform: translateX(-50%)
     &__subtitle
         padding-top: 40px
-        margin-bottom: 99px          
+        margin-bottom: 99px 
+.slider
+    &-project
+        max-width: 405px
+    &__title
+        color: $black
+        font-size: 24px
+        font-weight: normal
+        margin: 3px 0 53px
+    &__description
+        display: block
+        color: $slider-description
+        font-size: 12px
+        font-weight: 300
+        line-height: 20px 
+        margin-bottom: 18px
+    &__name
+        color: $black
+        font-size: 16px
+        font-weight: 300
+        line-height: 20px 
+        padding: 0 0 60px
+.content
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+    &__title
+        color: $slider-description
+        font-size: 12px
+        font-weight: 300
+        line-height: 20px 
+        margin-bottom: 16px
+    &__text
+        color: $black
+        font-size: 16px
+        font-weight: 300
+        line-height: 20px                                 
