--- a/src/sass/block/_projects.sass
+++ b/src/sass/block/_projects.sass
@@ -37,7 +37,7 @@
         font-size: 16px
         font-weight: 300
         line-height: 20px 
-        padding: 0 0 60px
+        margin: 0 0 60px
 .content
     display: flex
     flex-wrap: wrap
@@ -47,9 +47,21 @@
         font-size: 12px
         font-weight: 300
         line-height: 20px 
-        margin-bottom: 16px
+        margin: 0 0 16px
     &__text
         color: $black
         font-size: 16px
         font-weight: 300
-        line-height: 20px                                 
+        line-height: 20px
+        margin: 0
+    &__button
+        margin-top: 67px
+        width: 216px
+        height: 60px
+        background-color: $form-button
+        text-transform: uppercase
+        border: none
+        font-size: 13px
+        font-weight: normal
+        letter-spacing: 0.33px
+        color: $white
