--- a/src/sass/_slick.scss
+++ b/src/sass/_slick.scss
@@ -16,6 +16,11 @@
     max-width: 905px;
     margin: auto
 }
+.slick-slider:focus,
+.slick-slider .slick-list:focus,
+.slick-list:focus {
+    outline: none;
+}
 .slick-list {
     position: relative;
     overflow: hidden;
